force-app/main/default/objects/Krow__Invoice_Line_Item__c/fields/Krow__Amount_Total__c.field-meta.xml
<CustomField>
    <fullName>Krow__Amount_Total__c</fullName>
    <formula>Krow__Hours__c *  Krow__Bill_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>