force-app/main/default/objects/Krow__Invoice_Line_Item__c/fields/Krow__Invoice__c.field-meta.xml
<CustomField>
    <fullName>Krow__Invoice__c</fullName>
    <label>Invoice</label>
    <referenceTo>Krow__Invoice__c</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>Invoice_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>