force-app/main/default/objects/Krow__Invoice_Line_Item__c/fields/Krow__Resource__c.field-meta.xml
<CustomField>
    <fullName>Krow__Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>