force-app/main/default/objects/Krow__Invoice_Line_Item__c/fields/Krow__Tax__c.field-meta.xml
<CustomField>
    <fullName>Krow__Tax__c</fullName>
    <label>Tax %</label>
    <precision>7</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>