force-app/main/default/objects/Krow__Invoice_Line_Item__c/fields/Krow__Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Krow__Total_Amount__c</fullName>
    <formula>Krow__Amount_Total__c  +  Krow__Tax_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>